# BLDC-motor

./: .gitmodules  BLDC_speed.ino  CLAUDE.md  Current_ACS712_3.3v stats.numbers  Load test data.numbers  MOTOR_CONTROL_WEBSERVER_SPEC.md  Motor synchronization.numbers  PC817A characteristics.numbers
BLDC_speed/: BLDCPulseCalculator.h  BLDC_speed.ino  CMakeLists.txt  OLEDFunctions.hpp
BLDC_speed/main/: BLDCPulseCalculator.cpp  BLDCPulseCalculator.h  BLDCPulseCalculator.hpp  BLDC_speed.cpp  CMakeLists.txt  GLOBALS.hpp  OLEDFunctions.hpp  PwmGenerator.cpp  PwmGenerator.hpp  Uart.cpp  Uart.hpp
BLDC_speed/main/BLDCPulseCalculator/: BLDCPulseCalculator.cpp  BLDCPulseCalculator.hpp
BLDC_speed/main/Uart/: Uart.cpp  Uart.hpp
BLDC_speed_Arduino/: BLDCPulseCalculator.hpp  BLDC_speed_Arduino.ino  GLOBALS.hpp  MotorDirection.hpp  PwmGenerator.hpp  dataLogger.hpp  handleMotorInput.hpp  motorDirection.hpp  motorSynchronization.hpp  oledFunctions.hpp  pwmGenerator.hpp  uart.hpp
Current_Sensor/: ACS712.h  ACS712.hpp  BLDCPulseCalculator.h  BUZZER.hpp  Current_Sensor.ino  Display.h  GLOBALS.h  GLOBALS.hpp  OLEDFunctions.h  PC817A.hpp  UART.hpp
Documents/: Current_ACS712_3.3v stats.numbers  Motor synchronization old.numbers  Untitled Diagram.drawio
Fast_pwm_control_signal/: Fast_pwm_control_signal.ino
fast_PWM_ESP32/: fast_PWM_ESP32.ino
motor_control_webserver/: BLDCPulseCalculator.hpp  ControlInterface.hpp  DataCollector.hpp  DoorLock.hpp  GLOBALS.hpp  MotorDirection.hpp  PwmGenerator.hpp  UARTCurrentSensor.hpp  WebServerManager.hpp  WebSocketManager.hpp  (+1 more)
(+8 files in other folders)
